change game css

--- a/src/index.css
+++ b/src/index.css
@@ -18,4 +18,4 @@ code {
   width: 90%;
 }
 
-#nav{background-color:#5a6268; z-index: 4;position:fixed;width: 100%}
+#nav{background-color: rgb(66, 169, 25h); z-index: 4;position:fixed;width: 100%}
